2010-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/amndmjob_main.c, ndmp-src/ndmjob_main.c:
	  include conffile.h, not config.h.

2010-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/version.m4: Allow 2 digits version.

2010-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/deb/changelog, packaging/deb/rules,
	  packaging/deb/buildpkg, packaging/rpm/buildpkg,
	  packaging/rpm/amanda.spec,
	  configure.in: Change version to 3.2alpha.

2010-03-05  Dustin J. Mitchell <dustin@zmanda.com>
	* configure.in config/amanda/progs.m4: AC_SUBST LPR-related
	  variables, and don't define them
	* perl/Amanda/Constants.pm.in: add LPR-related constants
	* installcheck/amreport.pl: lots of new tests, all hand-verified to
	  pass for the C amreport as well, sometimes with minor differences
	* installcheck/mock/lpr.pl: mock 'lpr' for installchecks
	* installcheck/mock/mail.pl: mock 'mail' for installchecks
	* installcheck/Makefile.am: new mocks
	* perl/Makefile.am perl/Amanda/Report/postscript.pm: postscript output
	  support for amreport
	* server-src/Makefile.am server-src/amreport.pl
	  server-src/amreport_new.pl server-src/reporter.c:
	  make the perl amreport "live"

2010-03-05  Dustin J. Mitchell <dustin@zmanda.com>,
	    Jean-Louis Martineau <martineau@zmanda.com>,
	    Paul C. mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm perl/Amanda/Report/human.pm
	  server-src/amreport_new.pl installcheck/Amanda_Report.pl: major
	  overhaul to perl reporting framework (collaborative effort of three
	  developers)

2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Remove leading 0 on day date.
	* server-src/amreport_new.pl: Remove leading 0 on day date.

2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Set $self->{hostname}.
	* perl/Amanda/Report/human.pm: Use $report->{hostname}.

2010-03-03  Paul C. mantz <pcmantz@zmanda.com>